--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,10 @@
 {
-    "builds": [
-        {
-            "src": "index.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-          "src": "/(.*)",
-          "dest": "index.js"
-        }
-    ]
-  }
+  "version": 2,
+  "name": "name-of-your-vercel-app",
+  "builds": [
+    { "src": "script.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.js" }
+  ]
+}
